@@ -61,6 +61,7 @@ MANDIR=@MANDIR@
 
 # configuration settings
 WITH_DEBUG=@WITH_DEBUG@
+WITH_MEMORY_DEBUG=@WITH_MEMORY_DEBUG@
 WITH_LIBDEBUG=@WITH_LIBDEBUG@
 WITH_PAMLOCKING=@WITH_PAMLOCKING@
 WITH_LCKPWDF=@WITH_LCKPWDF@
