@@ -14,6 +14,7 @@
  */
 
 #include <unistd.h>
+#include <time.h>
 #include "pam_private.h"
 
 /* **********************************************************************
